--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,8 @@
     "implicit-arrow-linebreak": "off",
     "function-paren-newline": "off",
     "indent": "off",
-    "no-constant-condition": "off"
+    "no-constant-condition": "off",
+    "quotes": "error",
+    "import/no-unresolved": "off"
   }
 }
